# linux-mem-inspector

./: .gitignore  CMakeLists.txt  README.md
inspector/: CMakeLists.txt  README.md
inspector/include/inspector/: config.hpp  inspector.hpp  inspector_mcp.hpp
inspector/src/: config.cpp  inspector.cpp  inspector_mcp.cpp  main.cpp
shared/: CMakeLists.txt
shared/include/shared/memory/: mem_helpers.hpp  memory_map.hpp  memory_reader.hpp  raider_mem_ioctl.h
shared/include/shared/process/: process_finder.hpp
shared/include/shared/scanner/: pattern_scanner.hpp
shared/src/memory/: mem_helpers.cpp  memory_map.cpp  memory_reader.cpp
shared/src/process/: process_finder.cpp
shared/src/scanner/: pattern_scanner.cpp
